--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
     "react-images-upload": "^1.1.99",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
@@ -89,5 +92,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.4.1"
   }
 }
